typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity19.ts.stderr
error: Unexpected token Some(AssignOp("="))
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity19.ts:2:1
  |
2 | = 2;
  | ^

